--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
             <artifactId>mail</artifactId>
             <version>1.4.5</version>
         </dependency>
+
+		<dependency>
+			<groupId>com.pdfcrowd</groupId>
+			<artifactId>pdfcrowd</artifactId>
+			<version>2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -99,6 +105,29 @@
 					<executable>true</executable>
 				</configuration>
 			</plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <groupId>com.pdfcrowd</groupId>
+                    <artifactId>pdfcrowd</artifactId>
+                    <version>2.4</version>
+                    <packaging>jar</packaging>
+                    <file>pdfcrowd.jar</file>
+                    <generatePom>false</generatePom>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>install-jar-lib</id>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <phase>validate</phase>
+                    </execution>
+                </executions>
+            </plugin>
 		</plugins>
 	</build>
 
