Added pdfcrowd lib to maven attempt 3

--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
                     <version>2.4</version>
                     <packaging>jar</packaging>
                     <file>lib/pdfcrowd.jar</file>
-                    <generatePom>false</generatePom>
+                    <generatePom>true</generatePom>
                 </configuration>
                 <executions>
                     <execution>
