--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,15 @@
 		<appengine.maven.plugin>0.1.2</appengine.maven.plugin>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>in-project</id>
+			<name>In Project Repo</name>
+			<url>file://${project.basedir}/libs</url>
+		</repository>
+	</repositories>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -90,8 +99,8 @@
         </dependency>
 
 		<dependency>
-			<groupId>com.pdfcrowd</groupId>
-			<artifactId>pdfcrowd</artifactId>
+			<groupId>pdfcrowd</groupId>
+			<artifactId>pdfcrowd-sdk</artifactId>
 			<version>2.4</version>
 		</dependency>
 	</dependencies>
@@ -106,28 +115,7 @@
 				</configuration>
 			</plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.1</version>
-                <configuration>
-                    <groupId>com.pdfcrowd</groupId>
-                    <artifactId>pdfcrowd</artifactId>
-                    <version>2.4</version>
-                    <packaging>jar</packaging>
-                    <file>lib/pdfcrowd.jar</file>
-                    <generatePom>false</generatePom>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>install-jar-lib</id>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <phase>validate</phase>
-                    </execution>
-                </executions>
-            </plugin>
+
 		</plugins>
 	</build>
 
