--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,13 +1,15 @@
-javax.validation.constraints.AssertFalse.message = Dit veld moet uitgevinkt zijn
-javax.validation.constraints.AssertTrue.message  = Dit veld moet aangevinkt zijn
-javax.validation.constraints.DecimalMax.message  = De waarde van dit veld moet minder dan zijn dan ${inclusive == true ? 'of evenveel zijn als ' : ''}{value}
-javax.validation.constraints.DecimalMin.message  = De waarde van dit veld moet meer zijn dan ${inclusive == true ? 'of evenveel zijn als ' : ''}{value}
-javax.validation.constraints.Digits.message      = De waarde van dit veld is niet geldig (<{integer} digits>.<{fraction} digits> was verwacht)
-javax.validation.constraints.Future.message      = De waarde van dit veld moet in de toekomst zijn
-javax.validation.constraints.Max.message         = De waarde van dit veld moet minder of gelijk zijn als {value}
-javax.validation.constraints.Min.message         = De waarde van dit veld moet meer of gelijk zijn als {value}
-javax.validation.constraints.NotNull.message     = Dit veld mag niet leeg zijn
-javax.validation.constraints.Null.message        = Dit veld moet leeg zijn
-javax.validation.constraints.Past.message        = De waarde van dit veld moet in het verleden zijn
-javax.validation.constraints.Pattern.message     = De waarde van dit veld moet kloppen met "{regexp}" 
-javax.validation.constraints.Size.message        = Het aantal tekens van dit veld moet tussen de {min} en {max} zijn
+javax.validation.constraints.AssertFalse.message = This field must be unchecked
+javax.validation.constraints.AssertTrue.message  = This field must me checked
+javax.validation.constraints.DecimalMax.message  = Must be less than ${inclusive == true ? 'or equal to ' : ''}{value}
+javax.validation.constraints.DecimalMin.message  = Must be greater than ${inclusive == true ? 'or equal to ' : ''}{value}
+javax.validation.constraints.Digits.message      = This value is out of bounds, (<{integer} digits>.<{fraction} digits> expected)
+javax.validation.constraints.Future.message      = Must be in the future
+javax.validation.constraints.Max.message         = Must be less than or equal to {value}
+javax.validation.constraints.Min.message         = Must be greater than or equal to {value}
+javax.validation.constraints.NotNull.message     = This field can not be empty
+javax.validation.constraints.Null.message        = This field must be empty
+javax.validation.constraints.Past.message        = Must be in the past
+javax.validation.constraints.Pattern.message     = This value does not conform to the requirements
+javax.validation.constraints.Size.message        = This value must be between {min} and {max} characters
+
+
