Logger en timer ingebouwd, validators netter en validatiemessages gegroepeerd

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -11,5 +11,12 @@ javax.validation.constraints.Null.message        = This field must be empty
 javax.validation.constraints.Past.message        = Must be in the past
 javax.validation.constraints.Pattern.message     = This value does not conform to the requirements
 javax.validation.constraints.Size.message        = This value must be between {min} and {max} characters
+facturatie.customvalidation.EmailAddress.message = This value is not a valid email address
+facturatie.customvalidation.HouseNumber.message  = This value is not a valid house number
+facturatie.customvalidation.KVKNumber.message    = This value is not a valid KVK number
+facturatie.customvalidation.PhoneNumber.message  = This value is not a valid (cell)phone number
+facturatie.customvalidation.Zipcode.message      = This value is not a valid zipcode
+facturatie.customvalidation.IBAN.message         = This value is not a valid IBAN
+facturatie.customvalidation.BTWNumber.message    = This value is not a valid BTW number
 
 
