--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,10 @@
             <artifactId>mail</artifactId>
             <version>1.4.5</version>
         </dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
