--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ jdk:
 install: true
 addons:
   sonarqube:
+    organization: uv0nmk1d4fy3
     token:
       secure: $SONAR_TOKEN # encrypted value of your token
 script:
