--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 spring.datasource.url=jdbc:mysql://server.pascalvanhoof.nl:3306/23IVH11A1
 spring.datasource.username=23IVH11A1_Facturatie
 spring.datasource.password=MoCEWOJ2k6p3
-#spring.datasource.url=jdbc:mysql://localhost:3306/Facturatie
-#spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/23IVH11A1
+#pring.datasource.username=root
 #spring.datasource.password=
 
 spring.datasource.testWhileIdle = true
