--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,10 @@
 			<artifactId>guava</artifactId>
             <version>19.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>javaFX</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
