--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # DataSource settings: set here your own configurations for the database
 # connection. In this example we have "netgloo_blog" as database name and
 # "root" as username and password.
-spring.datasource.url=jdbc:mysql://server.pascalvanhoof.nl:3306/23IVH11A1
-spring.datasource.username=23IVH11A1_Facturatie
-spring.datasource.password=MoCEWOJ2k6p3
-#spring.datasource.url=jdbc:mysql://localhost:3306/Facturatie
-#spring.datasource.username=root
-#spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://server.pascalvanhoof.nl:3306/23IVH11A1
+#spring.datasource.username=23IVH11A1_Facturatie
+#spring.datasource.password=MoCEWOJ2k6p3
+spring.datasource.url=jdbc:mysql://localhost:3306/23IVH11A1
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
